<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/state_error_root"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/spacing_xlarge">

    <ImageView
        android:id="@+id/state_error_icon"
        android:layout_width="@dimen/state_icon_size"
        android:layout_height="@dimen/state_icon_size"
        android:alpha="0.8"
        android:contentDescription="@null"
        app:tint="?attr/colorError"
        tools:src="@drawable/ic_cloud_off_24" />

    <TextView
        android:id="@+id/state_error_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:text="@string/state_error_default_title"
        android:textAppearance="?attr/textAppearanceTitleMedium"
        android:textColor="?attr/colorOnSurface"
        tools:text="Bir Sorun Oluştu" />

    <TextView
        android:id="@+id/state_error_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_micro"
        android:gravity="center"
        android:text="@string/state_error_default_subtitle"
        android:textAppearance="?attr/textAppearanceBodyMedium"
        android:textColor="?attr/colorOnSurfaceVariant"
        tools:text="İnternet bağlantınızı kontrol edin." />

    <Button
        android:id="@+id/state_error_retry_button"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:text="@string/state_error_retry_button"
        tools:text="Tekrar Dene" />

</LinearLayout>
